# LLM_Function_Calling

./: README.md
src/: Makefile  __init__.py  __main__.py  pyproject.toml  utils.py
src/decoder/: constrained_decoder.py  function_selector.py  token_filter.py  vocabulary_index.py
src/models/: functions_definition.py
src/parser/: input_parser.py  output_parser.py
src/state_machine/: json_state_machine.py  states.py  token_filter.py
